# rust-cheat

./: .gitignore  Cargo.toml  LICENSE  README.md  quiz-module-design.md  rust-ai-review-checklist.md
docs/: chatgpt-chat-history.md  quiz-module-design.md
questions/: async.json  concurrency.json  errors.json  io_boundaries.json  iterators.json  logging.json  options.json  pattern_matching.json
src/: async_demo.rs  concurrency.rs  errors.rs  io_boundaries.rs  iterators.rs  logging.rs  main.rs  options.rs  pattern_matching.rs  quiz.rs
