[package]
name = "rust-cheat"
version = "0.1.0"
edition = "2021"

[dependencies]
skim = "0.15"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
is-terminal = "0.4"
rand = "0.8"
crossterm = "0.27"
syntect = "5.2"
pulldown-cmark = "0.12"

[lints.rust]
warnings = "allow"